[gd_scene load_steps=2 format=3 uid="uid://d17uy3m4dh388"]

[ext_resource type="Script" path="res://material_maker/tools/share/upload_dialog.gd" id="1"]

[node name="UploadDialog" type="Window"]
title = "Share asset"
position = Vector2i(0, 36)
size = Vector2i(600, 500)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Preview" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Target" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Name:"

[node name="Name" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LicenseLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "License:"

[node name="License" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="TagsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Tags:"

[node name="Tags" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Description:"

[node name="Description" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Disclaimer" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "By submitting this, you will share the whole asset you created, not only its preview. If you don't intend to share your work, please use the Cancel button now!
If you actually intend to share this asset, thanks for doing so, and you can use the fields above to specify a name, a license, tags and a description before submitting it with the OK button."
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="OK" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "OK"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_UploadDialog_popup_hide"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Target" to="." method="_on_Target_item_selected"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer/Name" to="." method="_on_Name_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/OK" to="." method="_on_OKButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Cancel" to="." method="_on_UploadDialog_popup_hide"]
